# challenger-arena

./: .gitignore  README.md  plan.md
agents/: setup.sh
agents/characters/: dca-bot.json  mean-reverter.json  momentum-trader.json
contracts/scripts/: deploy.sh  interact.sh
contracts/tournament/: Cargo.toml
contracts/tournament/src/: lib.rs
engine/: .env.example  package-lock.json  package.json
engine/src/: config.ts  index.ts
engine/src/services/: eliza-agent.ts  leaderboard.ts  price-feed.ts
engine/src/simulator/: portfolio.ts  tournament.ts
engine/src/strategies/: base.ts  dca.ts  mean-reversion.ts  momentum.ts
engine/src/types/: index.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CountdownTimer.tsx  Header.tsx  Leaderboard.tsx  PriceChart.tsx  RegistrationForm.tsx  TradeHistory.tsx
frontend/src/pages/: AgentDetail.tsx  Home.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
